[package]
name = "ink_contract_decoder"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/kvinwang/ink_contract_decoder.git"
license = "MIT"
description = "A Rust crate to decode ink! contracts JSON into Rust types using Serde."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
serde_bytes = "0.11"
